# eventlog2html

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BUGS  CHANGELOG  CHANGELOG.md  LICENSE  NEWS  README  README.md  THANKS  build.nix  cabal.project  default.nix  eventlog2html.cabal  examples.html  ghc.eventlog  ghc.eventlog.json  ghc.eventlog.json.traces  hp2pretty.cabal  index.html  shell.nix  stack.yaml  ticky_help.md  update-assets.sh  vega.html  versions.json
.github/workflows/: build.yaml  deploy.yaml  ghc-matrix.yml
css/: default.css
docs/: index.md
docs/css/: default.css
docs/examples/: biographical-samples.eventlog  eventlog2html-ticky.eventlog  eventlog2html.eventlog  ghc-cost-centre.eventlog  ghc.eventlog  hie.eventlog
docs/templates/: default.html  examples.html
examples/: Makefile  biographical-samples.eventlog.html  eventlog2html-ticky.eventlog.html  eventlog2html.eventlog.html  figure.sh  ghc-cost-centre.eventlog.html  ghc.eventlog.html  hie.eventlog.html  html.sh  report.tex
hakyll-eventlog/: hakyll-eventlog.cabal  site.hs
inline-docs/: heap.html  no-cost-centres.html  no-detailed.html  no-heap-profile.html  no-ticky.html
javascript/: ccmap.vg  ellipsis.js  stylesheet.css  tablogic.js  vega-lite@4.16.8  vega@5.16.1
main/: Main.hs
nix/: default.nix  site.nix  sources.json
src/: Args.hs  Bands.hs  Data.hs  Events.hs  Graphics.hs  HTML.hs  HeapProf.hs  HtmlTemplate.hs  Javascript.hs  Main.hs  Parse.hs  Pattern.hs  Pretty.hs  Print.hs  Process.hs  Prune.hs  SVG.hs  Total.hs  Types.hs  Vega.hs  VegaTemplate.hs
src/Eventlog/: Args.hs  AssetVersions.hs  Bands.hs  ByInfoTable.hs  Data.hs  Detailed.hs  Dwarf.hs  Events.hs  HeapProf.hs  HtmlTemplate.hs  Javascript.hs  Prune.hs  Ticky.hs  Total.hs  Trie.hs  Types.hs  Vega.hs  VegaTemplate.hs  VegaVersions.hs
src/Eventlog/Rendering/: Bootstrap.hs  Types.hs
tests/: escapes.hs  namelen.hs  unicode.hs
