Name:                eventlog2html
Version:             0.6.0
Synopsis:            Visualise an eventlog
Description:         eventlog2html is a library for visualising eventlogs.
                     At the moment, the intended use is to visualise eventlogs
                     which have heap profiling events, as a replacement to hp2ps
                     and hp2pretty.

                     eventlog2html creates a static webpage which contains
                     a collection of different interactive charts for analysing
                     heap usage. Trace events are displayed on the chart and
                     the charts can be zoomed, scrolled and filtered to give
                     a more exploratory feel to heap profile analysis.
Homepage:            https://mpickering.github.io/eventlog2html
Bug-reports:         https://github.com/mpickering/eventlog2html/issues
License:             BSD3
License-file:        LICENSE
Author:              Matthew Pickering, David Binder, Claude Heiland-Allen
Maintainer:          matthewtpickering@gmail.com
Copyright:           (C) 2010,2011,2015,2017,2018  Claude Heiland-Allen 2019 Matthew Pickering
Category:            Development
Build-type:          Simple
Extra-source-files:
  javascript/vega-lite@3.3.0
  javascript/vega-embed@4.2.0
  javascript/vega@5.4.0
  javascript/stylesheet.css
  javascript/tablogic.js
  javascript/ccmap.vg
  javascript/milligram.min.css
  javascript/normalize.min.css
cabal-version: 1.18
extra-doc-files: README.md
                 CHANGELOG
Tested-With:         GHC ==8.6.5

Library
  Build-depends:
    aeson                >= 1.4.3 && < 1.5,
    attoparsec           >= 0.13.2 && < 0.14,
    array                >= 0.5.3 && < 0.6,
    base                 >= 4 && < 5,
    blaze-html           >= 0.9.1 && < 0.10,
    bytestring           >= 0.10.8 && < 0.11,
    containers           >= 0.5.0 && < 0.7,
    file-embed           >= 0.0.11 && < 0.1,
    filepath             >= 1.4.2 && < 1.5,
    ghc-events           >= 0.10.0 && < 0.11,
    hashtables           >= 1.2.3 && < 1.3,
    hvega                >= 0.4.0 && < 0.5,
    mtl                  >= 2.2.2 && < 2.3,
    optparse-applicative >= 0.14.3 && < 0.15,
    semigroups           >= 0.18 && < 0.20,
    text                 >= 1.2.3 && < 1.3,
    time                 >= 1.8.0 && < 2.0,
    vector               >= 0.11,
    trie-simple          >= 0.4,
    hashable             >= 1.0

  GHC-options:         -Wall
  default-language:    Haskell2010
  HS-source-dirs:      src
  exposed-modules:     Eventlog.Args
                       Eventlog.Data
                       Eventlog.Trie
                       Eventlog.Javascript
                       Eventlog.Types
                       Eventlog.Total
                       Eventlog.Prune
                       Eventlog.Bands
                       Eventlog.Events
                       Eventlog.HeapProf
                       Eventlog.Vega
                       Eventlog.HtmlTemplate
                       Eventlog.VegaTemplate
  other-modules:       Paths_eventlog2html

Executable eventlog2html
  GHC-options:         -Wall
  default-language:    Haskell2010
  HS-source-dirs:      main
  Main-is:             Main.hs
  build-depends:
      base >= 4 && < 5,
      eventlog2html,
      aeson                >= 1.4.3 && < 1.5,
      text                 >= 1.2.3 && < 1.3,
      filepath             >= 1.4.2 && < 1.5


Source-repository head
  type:                git
  location:            https://github.com/mpickering/eventlog2html.git

