cabal-version:       2.4
Name:                eventlog2html
Version:             0.11.1
Synopsis:            Visualise an eventlog
Description:         eventlog2html is a library for visualising eventlogs.
                     At the moment, the intended use is to visualise eventlogs
                     which have heap profiling events, as a replacement to hp2ps
                     and hp2pretty.

                     eventlog2html creates a static webpage which contains
                     a collection of different interactive charts for analysing
                     heap usage. Trace events are displayed on the chart and
                     the charts can be zoomed, scrolled and filtered to give
                     a more exploratory feel to heap profile analysis.
Homepage:            https://mpickering.github.io/eventlog2html
Bug-reports:         https://github.com/mpickering/eventlog2html/issues
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Matthew Pickering, David Binder, Claude Heiland-Allen
Maintainer:          matthewtpickering@gmail.com
Copyright:           (C) 2010,2011,2015,2017,2018  Claude Heiland-Allen 2019 Matthew Pickering
Category:            Development
Build-type:          Simple
Extra-source-files:
  javascript/**/*.js
  javascript/**/*.css
  javascript/**/*.vg
  javascript/generated/vega-embed@6.14.0
  javascript/generated/vega@5.17.0
  javascript/generated/vega-lite@4.17.0
  javascript/generated/popper.js@1.14.3
  inline-docs/*.html
extra-doc-files: README.md
                 CHANGELOG.md
Tested-With:         GHC ==9.0.2, GHC ==9.2.7, GHC ==9.4.7, GHC ==9.6.2, GHC ==9.8.1, GHC==9.10.1

Library
  Build-depends:
    aeson                >= 1.4.3 && < 1.6 || >= 2.0 && < 2.3,
    attoparsec           >= 0.13.2 && < 0.15,
    array                >= 0.5.3 && < 0.6,
    base                 >= 4 && < 5,
    blaze-html           >= 0.9.1 && < 0.10,
    blaze-markup         >= 0.8 && < 0.9,
    bytestring           >= 0.10.8 && < 0.13,
    containers           >= 0.5.0 && < 0.8,
    file-embed           >= 0.0.11 && < 0.1,
    filepath             >= 1.4.2 && < 1.6,
    ghc-events           >= 0.19.0 && < 0.20,
    ghc-heap             >= 9 && < 10,
    hashable             >= 1.0 && < 1.5,
    hashtables           >= 1.2.3 && < 1.4,
    hvega                >= 0.11.0 && < 0.13,
    mtl                  >= 2.2.2 && < 2.4,
    optparse-applicative >= 0.14.3 && < 0.19,
    raw-strings-qq       >= 1.1 && < 1.2,
    semigroups           >= 0.18 && < 0.21,
    statistics-linreg    >= 0.3 && < 0.4,
    text                 >= 1.2.3 && < 1.3 || >= 2.0 && < 2.2,
    time                 >= 1.8.0 && < 2.0,
    trie-simple          >= 0.4 && < 0.5,
    vector               >= 0.11 && < 0.14

  GHC-options:         -Wall
  default-language:    Haskell2010
  HS-source-dirs:      src
  exposed-modules:     Eventlog.Args
                       Eventlog.Data
                       Eventlog.Trie
                       Eventlog.Javascript
                       Eventlog.Types
                       Eventlog.Total
                       Eventlog.Prune
                       Eventlog.Bands
                       Eventlog.Events
                       Eventlog.HeapProf
                       Eventlog.Vega
                       Eventlog.HtmlTemplate
                       Eventlog.Rendering.Bootstrap
                       Eventlog.Rendering.Types
                       Eventlog.VegaTemplate
                       Eventlog.AssetVersions
                       Eventlog.Detailed
                       Eventlog.Ticky
  other-modules:       Paths_eventlog2html
  autogen-modules:     Paths_eventlog2html

Executable eventlog2html
  GHC-options:         -Wall
  default-language:    Haskell2010
  HS-source-dirs:      main
  Main-is:             Main.hs
  build-depends:
      aeson,
      base,
      eventlog2html,
      filepath,
      githash >= 0.1.6.2 && < 0.2,
      text
  other-modules:       Paths_eventlog2html
  autogen-modules:     Paths_eventlog2html


Source-repository head
  type:                git
  location:            https://github.com/mpickering/eventlog2html.git

