Name:                hp2pretty
Version:             0.6
Synopsis:            generate pretty graphs from heap profiles
Description:         hp2pretty is a rewrite of hp2ps, implemented in Haskell, with
                     the aims of being maintainable, with more flexible output, and
                     more beautiful output.  Currently hp2pretty outputs Scalable
                     Vector Graphics (SVG) only, though PostScript (PS) is planned.
                     Also none (count'em) of hp2ps' options are implemented yet in
                     hp2pretty.
                     .
                     In hp2pretty-0.6 ByteString is replaced by Text, fixing bugs
                     with Unicode.
                     .
                     In hp2pretty-0.5 using attoparsec and floatshow internally
                     should give a healthy speedup.
                     .
                     In hp2pretty-0.4 usage changed since the previous release:
                     .
                        hp2pretty *.hp
                     .
                        hp2pretty --uniform-scale=time   *.hp
                     .
                        hp2pretty --uniform-scale=memory *.hp
                     .
                        hp2pretty --uniform-scale=both   *.hp
                     .
                     Colours also changed: now they are based on a hash of the
                     cost label, which should make colours have stable semantics
                     across program runs.

Homepage:            http://code.mathr.co.uk/hp2pretty
License:             BSD3
License-file:        LICENSE
Author:              Claude Heiland-Allen
Maintainer:          claude@mathr.co.uk
Copyright:           (C) 2010,2011,2015  Claude Heiland-Allen
Category:            Development
Build-type:          Simple
Extra-source-files:  BUGS NEWS README THANKS
Cabal-version:       >=1.6

Executable hp2pretty
  Build-depends:       base >= 4 && < 5, array, attoparsec, containers, filepath, floatshow, mtl, text
  GHC-options:         -Wall -rtsopts
  HS-source-dirs:      src
  Main-is:             Main.hs
  Other-modules:       Types
                       Total
                       Prune
                       Bands
                       Pretty
                       Print
                       SVG
                       Graphics

Source-repository head
  type:                git
  location:            http://code.mathr.co.uk/hp2pretty.git

Source-repository this
  type:                git
  location:            http://code.mathr.co.uk/hp2pretty.git
  tag:                 v0.6
