name:               hakyll-eventlog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.10
                  , eventlog2html
                  , pandoc-types >= 1.20
                  , directory
                  , filepath
                  , optparse-applicative
                  , blaze-html
                  , process
                  , split
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010
